# kokkos_ifelse

./: CMakeLists.txt  main.cpp
